--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
           <div class="container">
             <div class="rooms__wrapper">
               <ul class="rooms__list">
-                <li class="rooms__item room">
+                <li class="rooms__item room is-reserved">
                   <div class="room__wrapper">
                     <div class="room__content-wrapper">
                       <div class="room__description-wrapper">
-                        <h3 class="room__title">Представительский люкс</h3>
+                        <a class="room__title-link" href="#">
+                          <h3 class="room__title">Представительский люкс</h3>
+                        </a>
                         <p class="room__description">Эксклюзивный номер с&nbsp;панорамным видом на&nbsp;центр города Москвы</p>
                       </div>
                       <div class="room__price-container">
@@ -67,7 +69,9 @@
                   <div class="room__wrapper">
                     <div class="room__content-wrapper">
                       <div class="room__description-wrapper">
-                        <h3 class="room__title">Дуплекс</h3>
+                        <a class="room__title-link" href="#">
+                          <h3 class="room__title">Дуплекс</h3>
+                        </a>
                         <p class="room__description">Просторный двухкомнатный номер с&nbsp;шикарным видом на&nbsp;парк</p>
                       </div>
                       <div class="room__price-container">
@@ -104,7 +108,9 @@
                   <div class="room__wrapper">
                     <div class="room__content-wrapper">
                       <div class="room__description-wrapper">
-                        <h3 class="room__title">Бизнес-люкс</h3>
+                        <a class="room__title-link" href="#">
+                          <h3 class="room__title">Бизнес-люкс</h3>
+                        </a>
                         <p class="room__description">Трёхкомнатный номер с&nbsp;панорамным видом на&nbsp;Москва&#8209;реку</p>
                       </div>
                       <div class="room__price-container">
