--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="container">
             <div class="rooms__wrapper">
               <ul class="rooms__list">
-                <li class="rooms__item room is-reserved">
+                <li class="rooms__item room" data-room>
                   <div class="room__wrapper">
                     <div class="room__content-wrapper">
                       <div class="room__description-wrapper">
@@ -46,12 +46,12 @@
                         <span class="room__price-wrapper">
                           от <span class="room__price">7 900</span> <span class="room__sign">₽</span>
                         </span>
-                        <button class="room__button btn" type="button">Забронировать</button>
+                        <button class="room__button btn" type="button" data-button-book>Забронировать</button>
                       </div>
-                      <div class="room__reservation-info">
-                        <span>Номер зарезервирован</span>
-                        <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
-                      </div>
+                    </div>
+                    <div class="room__reservation-info">
+                      <span>Номер зарезервирован</span>
+                      <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
                     </div>
                     <div class="room__image-wrapper">
                       <picture>
@@ -65,7 +65,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="rooms__item room">
+                <li class="rooms__item room" data-room>
                   <div class="room__wrapper">
                     <div class="room__content-wrapper">
                       <div class="room__description-wrapper">
@@ -79,18 +79,18 @@
                         <span class="room__price-wrapper">
                           от <span class="room__price">5 700</span> <span class="room__sign">₽</span>
                         </span>
-                        <button class="room__button btn" type="button">Забронировать</button>
+                        <button class="room__button btn" type="button" data-button-book>Забронировать</button>
                       </div>
-                      <div class="room__reservation-info">
-                        <span>Номер зарезервирован</span>
-                        <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
+                      <div class="room__motivation motivation">
+                        <span class="motivation__text">Гарантия лучшей цены!</span>
+                        <svg width="36" height="30" viewBox="0 0 36 30" fill="#ff7647" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                          <use href="./img/sprite.svg#icon-triangle"></use>
+                        </svg>
                       </div>
                     </div>
-                    <div class="room__motivation motivation">
-                      <span>Гарантия лучшей цены!</span>
-                      <svg width="36" height="30" viewBox="0 0 36 30" fill="#ff7647" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                        <use href="./img/sprite.svg#icon-triangle"></use>
-                      </svg>
+                    <div class="room__reservation-info">
+                      <span>Номер зарезервирован</span>
+                      <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
                     </div>
                     <div class="room__image-wrapper">
                       <picture>
@@ -104,7 +104,7 @@
                     </div>
                   </div>
                 </li>
-                <li class="rooms__item room">
+                <li class="rooms__item room" data-room>
                   <div class="room__wrapper">
                     <div class="room__content-wrapper">
                       <div class="room__description-wrapper">
@@ -118,12 +118,12 @@
                         <span class="room__price-wrapper">
                           от <span class="room__price">4 900</span> <span class="room__sign">₽</span>
                         </span>
-                        <button class="room__button btn" type="button">Забронировать</button>
+                        <button class="room__button btn" type="button" data-button-book>Забронировать</button>
                       </div>
-                      <div class="room__reservation-info">
-                        <span>Номер зарезервирован</span>
-                        <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
-                      </div>
+                    </div>
+                    <div class="room__reservation-info">
+                      <span>Номер зарезервирован</span>
+                      <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
                     </div>
                     <div class="room__image-wrapper">
                       <picture>
