--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <source type="image/webp" srcset="./img/rooms/duplex/duplex.webp 1x, ./img/rooms/duplex/duplex@2x.webp 2x">
                         <source media="(max-width: 767px)" srcset="./img/rooms/duplex/duplex-mobile.jpg 1x, ./img/rooms/duplex/duplex-mobile@2x.jpg 2x">
                         <source media="(max-width: 1279px)" srcset="./img/rooms/duplex/duplex-tablet.jpg 1x, ./img/rooms/duplex/duplex-tablet@2x.jpg 2x">
-                        <img src="./img/rooms/duplex/duplex.jpg" srcset="./img/rooms/duplex/duplex@2x.jpg 2x" width="372" height="372" alt="Представительский люкс." loading="lazy">
+                        <img src="./img/rooms/duplex/duplex.jpg" srcset="./img/rooms/duplex/duplex@2x.jpg 2x" width="372" height="372" alt="Дуплекс." loading="lazy">
                       </picture>
                     </div>
                   </div>
@@ -132,7 +132,7 @@
                         <source type="image/webp" srcset="./img/rooms/business-suite/business-suite.webp 1x, ./img/rooms/business-suite/business-suite@2x.webp 2x">
                         <source media="(max-width: 767px)" srcset="./img/rooms/business-suite/business-suite-mobile.jpg 1x, ./img/rooms/business-suite/business-suite-mobile@2x.jpg 2x">
                         <source media="(max-width: 1279px)" srcset="./img/rooms/business-suite/business-suite-tablet.jpg 1x, ./img/rooms/business-suite/business-suite-tablet@2x.jpg 2x">
-                        <img src="./img/rooms/business-suite/business-suite.jpg" srcset="./img/rooms/business-suite/business-suite@2x.jpg 2x" width="372" height="372" alt="Представительский люкс." loading="lazy">
+                        <img src="./img/rooms/business-suite/business-suite.jpg" srcset="./img/rooms/business-suite/business-suite@2x.jpg 2x" width="372" height="372" alt="Бизнес-люкс." loading="lazy">
                       </picture>
                     </div>
                   </div>
