--- a/source/index.html
+++ b/source/index.html
@@ -32,11 +32,13 @@
           <div class="container">
             <div class="rooms__wrapper">
               <ul class="rooms__list">
-                <li class="rooms__item room">
+                <li class="rooms__item room" data-room>
                   <div class="room__wrapper">
                     <div class="room__content-wrapper">
                       <div class="room__description-wrapper">
-                        <h3 class="room__title">Представительский люкс</h3>
+                        <a class="room__title-link" href="#">
+                          <h3 class="room__title">Представительский люкс</h3>
+                        </a>
                         <p class="room__description">Эксклюзивный номер с&nbsp;панорамным видом на&nbsp;центр города Москвы</p>
                       </div>
                       <div class="room__price-container">
@@ -44,12 +46,12 @@
                         <span class="room__price-wrapper">
                           от <span class="room__price">7 900</span> <span class="room__sign">₽</span>
                         </span>
-                        <button class="room__button btn" type="button">Забронировать</button>
+                        <button class="room__button btn" type="button" data-button-book>Забронировать</button>
                       </div>
-                      <div class="room__reservation-info">
-                        <span>Номер зарезервирован</span>
-                        <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
-                      </div>
+                    </div>
+                    <div class="room__reservation-info">
+                      <span>Номер зарезервирован</span>
+                      <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
                     </div>
                     <div class="room__image-wrapper">
                       <picture>
@@ -63,11 +65,13 @@
                     </div>
                   </div>
                 </li>
-                <li class="rooms__item room">
+                <li class="rooms__item room" data-room>
                   <div class="room__wrapper">
                     <div class="room__content-wrapper">
                       <div class="room__description-wrapper">
-                        <h3 class="room__title">Дуплекс</h3>
+                        <a class="room__title-link" href="#">
+                          <h3 class="room__title">Дуплекс</h3>
+                        </a>
                         <p class="room__description">Просторный двухкомнатный номер с&nbsp;шикарным видом на&nbsp;парк</p>
                       </div>
                       <div class="room__price-container">
@@ -75,18 +79,18 @@
                         <span class="room__price-wrapper">
                           от <span class="room__price">5 700</span> <span class="room__sign">₽</span>
                         </span>
-                        <button class="room__button btn" type="button">Забронировать</button>
+                        <button class="room__button btn" type="button" data-button-book>Забронировать</button>
                       </div>
-                      <div class="room__reservation-info">
-                        <span>Номер зарезервирован</span>
-                        <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
+                      <div class="room__motivation motivation">
+                        <span class="motivation__text">Гарантия лучшей цены!</span>
+                        <svg width="36" height="30" viewBox="0 0 36 30" fill="#ff7647" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                          <use href="./img/sprite.svg#icon-triangle"></use>
+                        </svg>
                       </div>
                     </div>
-                    <div class="room__motivation motivation">
-                      <span>Гарантия лучшей цены!</span>
-                      <svg width="36" height="30" viewBox="0 0 36 30" fill="#ff7647" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                        <use href="./img/sprite.svg#icon-triangle"></use>
-                      </svg>
+                    <div class="room__reservation-info">
+                      <span>Номер зарезервирован</span>
+                      <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
                     </div>
                     <div class="room__image-wrapper">
                       <picture>
@@ -95,16 +99,18 @@
                         <source type="image/webp" srcset="./img/rooms/duplex/duplex.webp 1x, ./img/rooms/duplex/duplex@2x.webp 2x">
                         <source media="(max-width: 767px)" srcset="./img/rooms/duplex/duplex-mobile.jpg 1x, ./img/rooms/duplex/duplex-mobile@2x.jpg 2x">
                         <source media="(max-width: 1279px)" srcset="./img/rooms/duplex/duplex-tablet.jpg 1x, ./img/rooms/duplex/duplex-tablet@2x.jpg 2x">
-                        <img src="./img/rooms/duplex/duplex.jpg" srcset="./img/rooms/duplex/duplex@2x.jpg 2x" width="372" height="372" alt="Представительский люкс." loading="lazy">
+                        <img src="./img/rooms/duplex/duplex.jpg" srcset="./img/rooms/duplex/duplex@2x.jpg 2x" width="372" height="372" alt="Дуплекс." loading="lazy">
                       </picture>
                     </div>
                   </div>
                 </li>
-                <li class="rooms__item room">
+                <li class="rooms__item room" data-room>
                   <div class="room__wrapper">
                     <div class="room__content-wrapper">
                       <div class="room__description-wrapper">
-                        <h3 class="room__title">Бизнес-люкс</h3>
+                        <a class="room__title-link" href="#">
+                          <h3 class="room__title">Бизнес-люкс</h3>
+                        </a>
                         <p class="room__description">Трёхкомнатный номер с&nbsp;панорамным видом на&nbsp;Москва&#8209;реку</p>
                       </div>
                       <div class="room__price-container">
@@ -112,12 +118,12 @@
                         <span class="room__price-wrapper">
                           от <span class="room__price">4 900</span> <span class="room__sign">₽</span>
                         </span>
-                        <button class="room__button btn" type="button">Забронировать</button>
+                        <button class="room__button btn" type="button" data-button-book>Забронировать</button>
                       </div>
-                      <div class="room__reservation-info">
-                        <span>Номер зарезервирован</span>
-                        <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
-                      </div>
+                    </div>
+                    <div class="room__reservation-info">
+                      <span>Номер зарезервирован</span>
+                      <span>Перейти к <a class="room__reservation-link" href="#">оплате</a></span>
                     </div>
                     <div class="room__image-wrapper">
                       <picture>
@@ -126,7 +132,7 @@
                         <source type="image/webp" srcset="./img/rooms/business-suite/business-suite.webp 1x, ./img/rooms/business-suite/business-suite@2x.webp 2x">
                         <source media="(max-width: 767px)" srcset="./img/rooms/business-suite/business-suite-mobile.jpg 1x, ./img/rooms/business-suite/business-suite-mobile@2x.jpg 2x">
                         <source media="(max-width: 1279px)" srcset="./img/rooms/business-suite/business-suite-tablet.jpg 1x, ./img/rooms/business-suite/business-suite-tablet@2x.jpg 2x">
-                        <img src="./img/rooms/business-suite/business-suite.jpg" srcset="./img/rooms/business-suite/business-suite@2x.jpg 2x" width="372" height="372" alt="Представительский люкс." loading="lazy">
+                        <img src="./img/rooms/business-suite/business-suite.jpg" srcset="./img/rooms/business-suite/business-suite@2x.jpg 2x" width="372" height="372" alt="Бизнес-люкс." loading="lazy">
                       </picture>
                     </div>
                   </div>
